--- a/public/index.html
+++ b/public/index.html
@@ -262,6 +262,26 @@
         </div>
 
         <div id="home" class="u-d_flex" style="display:none" data-view="homepage">
+            <div class="card small u-mar-lr_auto">
+                <div class="card__header">
+                    <h1 class="u-mar-t_0 u-mar-b_0">Welcome to Mily!</h1>
+                </div>
+                <div class="card__content">
+                    <h3 class="u-mar-t_0 ">What can you do with Mily?</h3>
+                    <ul>
+                        <li class="u-pad-t_3 u-pad-b_3 u-d_flex"><i class="far fa-tree-alt fa-fw u-mar-r_2 u-o_50"></i>Create family trees</li>
+                        <li class="u-pad-t_3 u-pad-b_3 u-d_flex"><i class="far fa-envelope fa-fw u-mar-r_2 u-o_50"></i>Invite people to view, edit, or manage your tree</li>
+                        <li class="u-pad-t_3 u-pad-b_3 u-d_flex"><i class="far fa-leaf fa-fw u-mar-r_2 u-o_50"></i>Invite people to claim a leaf on your tree</li>
+                        <li class="u-pad-t_3 u-pad-b_3 u-d_flex"><i class="far fa-info fa-fw u-mar-r_2 u-o_50"></i>See detailed information about members on your tree</li>
+                    </ul>
+                </div>
+                <div class="card__footer">
+                    <a class="button" href="#/sign-up">Sign up</a>
+                    <p class="u-ta_center">or</p>
+                    <a class="button u-mar-b_1" href="#/log-in">Log in</a>
+                </div>
+            </div>
+            <p></p>
             <div class="debugMessage"></div>
         </div>
 
