--- a/public/index.html
+++ b/public/index.html
@@ -261,13 +261,12 @@
             <h1>Settings</h1>
         </div>
 
-        <div id="home" class="u-d_flex" style="display:none" data-view="homepage">
+        <div id="home" style="display:none" data-view="homepage">
+            <h1 class="u-mar-t_0 u-mar-lr_auto u-ta_center u-mar-b_8">Welcome to Mily!</h1>
+
             <div class="card small u-mar-lr_auto">
-                <div class="card__header">
-                    <h1 class="u-mar-t_0 u-mar-b_0">Welcome to Mily!</h1>
-                </div>
                 <div class="card__content">
-                    <h3 class="u-mar-t_0 ">What can you do with Mily?</h3>
+                    <h3 class="u-mar-t_0 u-ta_center">What can you do with Mily?</h3>
                     <ul>
                         <li class="u-pad-t_3 u-pad-b_3 u-d_flex"><i class="far fa-tree-alt fa-fw u-mar-r_2 u-o_50"></i>Create family trees</li>
                         <li class="u-pad-t_3 u-pad-b_3 u-d_flex"><i class="far fa-envelope fa-fw u-mar-r_2 u-o_50"></i>Invite people to view, edit, or manage your tree</li>
