--- a/public/index.html
+++ b/public/index.html
@@ -49,41 +49,6 @@
             <div class="debugMessage"></div>
         </div>
 
-        <div class="modal medium" data-modal="invite-members-to-tree_modal">
-            <form id="invite-members-to-tree_form" class="card modal-dialouge" role="dialog">
-                <div class="card__header">
-                    <h2 class="u-mar-b_0 u-mar-t_0">Invite member</h2>
-                </div>
-                <div class="card__content">
-                    <div class="inputGroup">
-                        <label for="invite-member-to-tree_email">Send email invite to</label>
-                        <input type="email" name="invite-member-to-tree_email" required>
-                    </div>
-                    <input type="text" name="invite-member-to-tree_id" hidden>
-                    <p class="u-mar-t_2 u-mar-b_1 u-fw_600 u-font-size_15">Permission type
-                        <i class="far fa-question-circle u-mar-l_1 u-cursor_pointer" data-modal-trigger="permissions-info"></i>
-                    </p>
-                    <div class="radioGroup">
-                        <input type="radio" class="u-mar-r_2" id="permission-tree_viewer" name="invite-member-to-tree_permission" value="viewer" checked>
-                        <label for="permission-tree_viewer">Viewer</label>
-
-                        <input type="radio" class="u-mar-r_2" id="permission-tree_contributor" name="invite-member-to-tree_permission" value="contributor">
-                        <label for="permission-tree_contributor">Contributor</label>
-
-                        <input type="radio" class="u-mar-r_2" id="permission-tree_admin" name="invite-member-to-tree_permission" value="admin">
-                        <label for="permission-tree_admin">Admin</label>
-                    </div>
-                </div>
-                <div class="card__footer">
-                    <div class="buttonGroup u-jc_flex-end">
-                        <a href="#" class="modal_button--close button secondary">Cancel</a>
-                        <button class="invite-member-tree_save" type="submit">Invite</button>
-                    </div>
-                </div>
-                <a href="#" class="modal_button--close iconButton white" tooltip="Close"><i class="fal fa-times"></i></a>
-            </form>
-        </div>
-
         <div style="display:none" data-view="sign-up">
             <form id="sign-up_form" class="ifAuth--hide card u-mar-lr_auto">
                 <div class="card__header u-pad_0">
@@ -238,8 +203,7 @@
                     </ul>
                     <div class="detailsPanel__information">
                         <div class="detailsPanel__profileImage u-mar-lr_auto u-mar-b_3"></div>
-                        <div class="detailsPanel__firstName u-mar-lr_auto header_m u-ta_center"></div>
-                        <p class="detailsPanel__fullName u-mar-lr_auto u-ta_center u-mar-b_6 u-font-size_14 u-mar-t_1"></p>
+                        <div class="detailsPanel__firstName u-mar-lr_auto header_m u-mar-b_6 u-ta_center"></div>
                         <!-- <h6 class="u-mar-b_4">Details</h6> -->
                         <div class="detailsPanel__metaData u-mar-b_7 u-mar-t_10"></div>
                         <!-- <h6 class="u-mar-b_4">Immediate family</h6> -->
@@ -338,7 +302,7 @@
         <div class="modal small" data-modal="rename-tree_modal">
             <form id="rename-tree_form" class="card modal-dialouge" role="dialog">
                 <div class="card__header">
-                    <h2 class="u-mar-b_0 u-mar-t_0">Rename tree</h2>
+                    <h2 class="u-mar-b_0 u-mar-t_0">Settings</h2>
                 </div>
                 <div class="card__content">
                     <div class="inputGroup">
@@ -346,11 +310,15 @@
                         <input type="text" name="rename-tree_name">
                         <input type="text" name="rename-tree_id" class="u-d_none">
                     </div>
+                    <div class="checkboxGroup right u-mar-t_4 u-mar-b_1">
+                        <input id="make-public" name="make-public" type="checkbox">
+                        <label for="make-public">Make public</label>
+                    </div>
                 </div>
                 <div class="card__footer">
                     <div class="buttonGroup u-jc_flex-end">
                         <a href="#" class="modal_button--close button secondary">Close</a>
-                        <button class="rename-tree_save" type="submit">Rename</button>
+                        <button class="rename-tree_save" type="submit">Save changes</button>
                     </div>
                 </div>
                 <a href="#" class="modal_button--close iconButton white" tooltip="Close"><i class="fal fa-times"></i></a>
@@ -361,7 +329,7 @@
             <form id="edit-tree_form" class="card modal-dialouge" role="dialog">
                 <a href="#" class="modal_button--close iconButton white"><i class="fal fa-times"></i></a>
                 <div class="card__header u-pad-b_0">
-                    <h2 class="u-mar-b_0 u-mar-t_0">Settings & Permissions
+                    <h2 class="u-mar-b_0 u-mar-t_0">Members
                         <i class="far fa-question-circle u-mar-l_1 u-cursor_pointer u-font-size_14" data-modal-trigger="permissions-info"></i>
                     </h2>
                 </div>
@@ -369,11 +337,8 @@
                     <div class="inputGroup">
                         <input type="text" name="edit-tree_id" class="u-d_none">
                     </div>
+                    <button data-modal-trigger="invite-members-to-tree_modal"><i class="far fa-user-plus u-mar-r_1"></i>Add member</button>
                     <div class="permissions u-mar-t_2"></div>
-                    <div class="checkboxGroup right u-mar-t_4 u-mar-b_1">
-                        <input id="make-public" name="make-public" type="checkbox">
-                        <label for="make-public">Make public</label>
-                    </div>
                 </div>
                 <div class="card__footer">
                     <div class="buttonGroup u-jc_flex-end">
@@ -381,6 +346,41 @@
                         <button class="edit-tree_save" type="submit">Save changes</button>
                     </div>
                 </div>
+            </form>
+        </div>
+
+        <div class="modal medium" data-modal="invite-members-to-tree_modal">
+            <form id="invite-members-to-tree_form" class="card modal-dialouge" role="dialog">
+                <div class="card__header">
+                    <h2 class="u-mar-b_0 u-mar-t_0">Add member</h2>
+                </div>
+                <div class="card__content">
+                    <div class="inputGroup">
+                        <label for="invite-member-to-tree_email">Send email invite to</label>
+                        <input type="email" name="invite-member-to-tree_email" required>
+                    </div>
+                    <input type="text" name="invite-member-to-tree_id" hidden>
+                    <p class="u-mar-t_2 u-mar-b_1 u-fw_600 u-font-size_15">Permission type
+                        <i class="far fa-question-circle u-mar-l_1 u-cursor_pointer" data-modal-trigger="permissions-info"></i>
+                    </p>
+                    <div class="radioGroup">
+                        <input type="radio" class="u-mar-r_2" id="permission-tree_viewer" name="invite-member-to-tree_permission" value="viewer" checked>
+                        <label tabindex="0" for="permission-tree_viewer">Viewer</label>
+
+                        <input type="radio" class="u-mar-r_2" id="permission-tree_contributor" name="invite-member-to-tree_permission" value="contributor">
+                        <label tabindex="0" for="permission-tree_contributor">Contributor</label>
+
+                        <input type="radio" class="u-mar-r_2" id="permission-tree_admin" name="invite-member-to-tree_permission" value="admin">
+                        <label tabindex="0" for="permission-tree_admin">Admin</label>
+                    </div>
+                </div>
+                <div class="card__footer">
+                    <div class="buttonGroup u-jc_flex-end">
+                        <a href="#" class="modal_button--close button secondary">Cancel</a>
+                        <button class="invite-member-tree_save" type="submit">Invite</button>
+                    </div>
+                </div>
+                <a href="#" class="modal_button--close iconButton white" tooltip="Close"><i class="fal fa-times"></i></a>
             </form>
         </div>
 
