dynamic rendering of partners

--- a/public/index.html
+++ b/public/index.html
@@ -180,8 +180,8 @@
                     <nav class="detailsPanel__actions u-mar-b_6 u-mar-t_1">
                         <button class="iconButton add-relationship_button" data-dropdown-target="add-relationship-dropdown" tooltip="Add relationship" tooltip-position="right"><i class="fal fa-plus"></i></button>
                         <div class="detailsPanel__actions-secondary u-mar-l_auto u-d_flex">
-                            <button class="iconButton secondary" id="member-more-options" data-dropdown-target="member-options-dropdown" tooltip="More options" tooltip-reveal="fast" tooltip-position="bottom middle" ><i class="far fa-ellipsis-v"></i></button>
-                            <!-- <button class="iconButton secondary" id="invite-member-action" data-modal-trigger="invite-member_modal" tooltip="Invite member" tooltip-reveal="fast" tooltip-position="bottom middle" ><i class="fal fa-envelope"></i></button> -->
+                            <button class="iconButton secondary" id="member-more-options" data-dropdown-target="member-options-dropdown" tooltip="More options" tooltip-position="bottom middle" ><i class="far fa-ellipsis-v"></i></button>
+                            <!-- <button class="iconButton secondary" id="invite-member-action" data-modal-trigger="invite-member_modal" tooltip="Invite member" tooltip-position="bottom middle" ><i class="fal fa-envelope"></i></button> -->
                             <!-- <button class="iconButton secondary u-mar-l_2" id="edit-member-action" tooltip="Edit" tooltip-position="bottom middle" ><i class="fal fa-pencil-alt"></i></button> -->
                             <button class="iconButton secondary details__button--close u-mar-l_2" tooltip="Hide panel" tooltip-position="bottom middle" ><i class="fal fa-times"></i></button> 
                         </div>
