ability and restrictions around creating relationships

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             <div id="pageTitle" class="u-mar-lr_auto u-c_white u-p_absolute"></div>
             <div class="mainNav__decoration"></div>
         </nav>
-        <button id="show-toolbar_button"class="white u-mar-t_1 u-mar-r_2 u-p_absolute"><i class="far fa-eye u-mar-r_1"></i>Show toolbar</button>
+        <button id="show-toolbar_button"class="white u-mar-t_1 u-mar-r_2 u-p_fixed"><i class="far fa-eye u-mar-r_1"></i>Show toolbar</button>
         <section id="toolbar" class="u-d_flex u-ai_center">
             <div class="searchGroup">
                 <i class="fa fa-search"></i>
