editing a member is now faster and dynamic with memberBluelprint

--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,12 @@
                         <li id="delete-leaf-action" class="dropdown__item u-c_danger"><i class="far fa-trash-alt u-mar-r_2"></i>Remove leaf from tree</li>
                     </ul>
                     <div class="detailsPanel__information">
-                        <div class="detailsPanel__profileImage u-mar-lr_auto u-mar-b_3"></div>
+                        <div class="detailsPanel__profileImage u-mar-lr_auto u-mar-b_3 u-p_relative">
+                            <input id="details-edit-profile" type="file">
+                            <button class="iconButton u-p_absolute">
+                                <i class="fal fa-upload"></i>
+                            </button>
+                        </div>
                         <div class="detailsPanel__firstName u-mar-lr_auto header_m u-mar-b_6 u-ta_center u-c_white"></div>
 
                         <!-- <h6 class="u-mar-b_4">Details</h6> -->
